--- a/.jfrog-pipelines/pipelines2.yaml
+++ b/.jfrog-pipelines/pipelines2.yaml
@@ -19,20 +19,20 @@ resources:
       imageTag: latest
       autoPull: true
       
-  - name: joke_build_info
-    type: BuildInfo
-    configuration:
-      sourceArtifactory: registry
-      buildName: joke_back
-      buildNumber: 1    
-
-  - name: joke_promoted_build_info
-    type: BuildInfo
-    configuration:
-      sourceArtifactory: registry
-      buildName: joke_back
-      buildNumber: 1
-      
+#  - name: joke_build_info
+#    type: BuildInfo
+#    configuration:
+#      sourceArtifactory: registry
+#      buildName: joke_back
+#      buildNumber: 1    
+#
+#  - name: joke_promoted_build_info
+#    type: BuildInfo
+#    configuration:
+#      sourceArtifactory: registry
+#      buildName: joke_back
+#      buildNumber: 1
+#      
   # - name: cron_trigger_docker
   #   type: CronTrigger
   #   configuration:
@@ -73,21 +73,21 @@ pipelines:
           outputResources:
             - name: joke_image           
 
-      - name: publish_joke_build
-        type: PublishBuildInfo
-        configuration:
-          inputSteps:
-            - name: docker_push
-          outputResources:
-            - name: joke_build_info          
-
-      - name: promote_joke_build
-        type: PromoteBuild
-        configuration:
-          targetRepository: docker
-          integrations:
-            - name: registry
-          inputResources:
-            - name: joke_build_info
-          outputResources:
-            - name: joke_promoted_build_info
+#      - name: publish_joke_build
+#        type: PublishBuildInfo
+#        configuration:
+#          inputSteps:
+#            - name: docker_push
+#          outputResources:
+#            - name: joke_build_info          
+#
+#      - name: promote_joke_build
+#        type: PromoteBuild
+#        configuration:
+#          targetRepository: docker
+#          integrations:
+#            - name: registry
+#          inputResources:
+#            - name: joke_build_info
+#          outputResources:
+#            - name: joke_promoted_build_info
